k8s/authelia/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 3
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      serviceAccountName: service-account
      enableServiceLinks: false
      volumes:
        - name: config
          configMap:
            name: config
        - name: users
          secret:
            secretName: authelia-secret
        - name: config-dir
          emptyDir: {}
      containers:
        - image: ghcr.io/kiwigrid/k8s-sidecar:1.27.6
          name: config-sync
          volumeMounts:
            - name: config-dir
              mountPath: /config/config.d/
        - name: authelia
          image: ghcr.io/authelia/authelia:4.38.15
          command: [authelia]
          resources:
            requests:
              memory: 100M
            limits:
              memory: 500M
          args:
            - --config=/config/config.d/
          volumeMounts:
            - name: config-dir
              mountPath: /config/config.d
            - name: config
              mountPath: /config/config.d/configuration.yml
              subPath: configuration.yml
              readOnly: true
            - name: users
              mountPath: /config/users.yml
              subPath: users.yml
              readOnly: true
          livenessProbe:
            httpGet: &probeHttp
              path: /api/health
              port: 9091
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet: *probeHttp
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          startupProbe:
            httpGet: *probeHttp
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          ports:
            - name: http
              containerPort: 9091
            - name: prometheus
              containerPort: 9959
