k8s/authelia/resources/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9959'
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: prometheus
      port: 9959
      targetPort: prometheus
