k8s/authelia/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    gethomepage.dev/href: 'https://auth.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: authelia
    gethomepage.dev/group: Other
    gethomepage.dev/icon: authelia
    gethomepage.dev/name: Authelia
    gethomepage.dev/widget.type: authelia
    gethomepage.dev/widget.url: http://authelia-service
spec:
  ingressClassName: nginx
  rules:
    - host: &host auth.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
